--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -31,8 +31,8 @@
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <!--android:fitsSystemWindows="true">-->
+                    android:layout_height="wrap_content"
+                    android:fitsSystemWindows="true">
 
                     <include layout="@layout/title" />
 
